--- a/src/components/molecules/header/header.module.scss
+++ b/src/components/molecules/header/header.module.scss
@@ -27,6 +27,10 @@
 
 .menuLinks {
   @include flex-direction(row);
+
+  @include max(tablet) {
+    display: none;
+  }
 }
 
 .rightNavButtons {
@@ -44,6 +48,10 @@
   box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.2);
   border-radius: 0.6rem;
   overflow: hidden;
+
+  @include max(tablet) {
+    display: none;
+  }
 
   .menuSection {
     @include flex-direction(row);
