--- a/src/components/molecules/subscribe-banner/subscribe.module.scss
+++ b/src/components/molecules/subscribe-banner/subscribe.module.scss
@@ -40,4 +40,13 @@
       }
     }
   }
+
+  @include max(tablet) {
+    &.hasImage {
+      margin-top: 20rem;
+    }
+    .textWrapper {
+      margin-bottom: 2rem;
+    }
+  }
 }
